--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
+
 </head>
 <body>
 
