--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,62 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Sharek</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>شارك</title>
+  <%= stylesheet_link_tag "layout" %>
+  <%= javascript_include_tag "jquery-1.5.2.min" %>
   <%= csrf_meta_tag %>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
-
+	
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="wrapper">
+  	<!-- Header -->
+  	<div class="header">
+      <!-- Logo Start -->
+      <div class="logo">
+        <h1 class="hidetext"><a href="javascript:void(0);">شارك</a></h1>
+      </div>
+      <div class="banner">
+      	<h2 class="hidetext">شارك - أتبرع - إصنع فرق</h2>
+      </div>
+      <div class="clear"></div>
+      <!-- Logo End -->
+    </div>
+    <!-- Header End -->
+      <!-- Navigation Start -->
+      <div class="navigation">
+        <!-- Navigation Menu Start -->
+        <ul class="nav">
+          <li class="current"><a href="javascript:void(0);">الرئيسية</a></li>
+          <li><a href="javascript:void(0);">عن الموقع</a></li>
+          <li><a href="javascript:void(0);">إحتياجات</a></li>
+          <li><a href="javascript:void(0);">أبلغ عن حالة</a></li>
+          <li><a href="javascript:void(0);">إنجازات</a></li>
+          <li><a href="javascript:void(0);">إتصل بنا</a></li>
+        </ul>
+        <!-- Navigation Menu End -->
+      </div>
+      <div class="clear"></div>
+      <!-- Navigation End -->
+    <!-- Container -->
+    <div class="container">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+    	
+    </div>
+    <!-- Container End -->
+    <!-- Footer -->
+    <div class="footer">
+      <div class="copyright"> بيان الخصوصية | اتصل بنا | © 2011 جميع الحقوق محفوظة لشركة SHAREK. الملكية والإدارة لشركة SHAREK. تم تطويره بواسطة شركة ESpace</div>
+      <div class="social">
+      	<div class="facebook"><a href="javascript:void(0);" class="hidetext">Facebook</a></div>
+        <div class="twitter"><a href="javascript:void(0);" class="hidetext">Facebook</a></div>
+        <div class="clear"></div>
+      </div>
+       
+    </div>
+		<!-- Footer End -->
+</div>
 </body>
 </html>
