--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     <!-- Container End -->
     <!-- Footer -->
     <div class="footer">
-      <div class="copyright"> بيان الخصوصية | اتصل بنا | © 2011 جميع الحقوق محفوظة لشركة SHAREK. الملكية والإدارة لشركة SHAREK. تم تطويره بواسطة شركة ESpace</div>
+      <div class="copyright"> بيان الخصوصية | اتصل بنا | © 2011 جميع الحقوق محفوظة لشركة SHAREK. الملكية والإدارة لشركة SHAREK.</div>
       <div class="social">
       	<div class="facebook"><a href="javascript:void(0);" class="hidetext">Facebook</a></div>
         <div class="twitter"><a href="javascript:void(0);" class="hidetext">Facebook</a></div>
