organisations added, some seeds, some needs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,9 @@
       <div class="navigation">
         <!-- Navigation Menu Start -->
         <ul class="nav">
-          <li class="current"><a href="javascript:void(0);">الرئيسية</a></li>
+          <li class="current"><a href="<%=root_url%>">الرئيسية</a></li>
           <li><a href="javascript:void(0);">عن الموقع</a></li>
-          <li><a href="javascript:void(0);">إحتياجات</a></li>
+          <li><a href="<%=needs_url%>">إحتياجات</a></li>
           <li><a href="javascript:void(0);">أبلغ عن حالة</a></li>
           <li><a href="javascript:void(0);">إنجازات</a></li>
           <li><a href="javascript:void(0);">إتصل بنا</a></li>
