needs filtration done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
           <li><a href="javascript:void(0);">عن الموقع</a></li>
           <li><a href="<%=needs_url%>">إحتياجات</a></li>
           <li><a href="javascript:void(0);">أبلغ عن حالة</a></li>
-          <li><a href="javascript:void(0);">إنجازات</a></li>
-          <li><a href="javascript:void(0);">إتصل بنا</a></li>
+          <li><a href="<%=satisfied_needs_url%>">إنجازات</a></li>
+          <li><a href="<%=browse_need_url({:category_id => 1})%>">إتصل بنا</a></li>
         </ul>
         <!-- Navigation Menu End -->
       </div>
