need listing and show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,12 @@
       <div class="navigation">
         <!-- Navigation Menu Start -->
         <ul class="nav">
-          <li class="current"><a href="<%=root_url%>">الرئيسية</a></li>
+          <li class="current"><a href="<%=root_path%>">الرئيسية</a></li>
           <li><a href="javascript:void(0);">عن الموقع</a></li>
           <li><a href="<%=needs_url%>">إحتياجات</a></li>
-          <li><a href="javascript:void(0);">أبلغ عن حالة</a></li>
-          <li><a href="<%=satisfied_needs_url%>">إنجازات</a></li>
-          <li><a href="<%=browse_need_url({:category_id => 1})%>">إتصل بنا</a></li>
+          <li><a href="<%=new_need_path%>">أبلغ عن حالة</a></li>
+          <li><a href="<%=satisfied_needs_path%>">إنجازات</a></li>
+          <li><a href="<%=browse_need_path({:category_id => 1})%>">إتصل بنا</a></li>
         </ul>
         <!-- Navigation Menu End -->
       </div>
