--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="https://www.facebook.com/2008/fbml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>شارك</title>
   <%= stylesheet_link_tag "layout" %>
-  <%= javascript_include_tag "jquery-1.5.2.min" %>
+  <%= javascript_include_tag "jquery-1.5.2.min", "application" %>
   <%= csrf_meta_tag %>
 	
 </head>
 <body>
+  <div id="fb-root"></div>
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({appId: '<%= FB_APP_ID%>', status: true, cookie: true,
+               xfbml: true});
+               
+      fbAfterInit();         
+    };
+    (function() {
+      var e = document.createElement('script'); e.async = true;
+      e.src = document.location.protocol +
+        '//connect.facebook.net/en_US/all.js';
+      document.getElementById('fb-root').appendChild(e);
+    }());
+  </script>
   <div class="wrapper">
   	<!-- Header -->
   	<div class="header">
@@ -42,6 +57,18 @@
     <div class="container">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
+
+<div id="divInfo">
+friends:
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    console.log("included");
+    alert('yalla');
+//    getFacebookFriends();
+  });
+</script> 
       <%= yield %>
     	
     </div>
