--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,37 +3,22 @@
       <!--banner section -->
       <div id="banner_wrapp">
         <div id="banner"><img src="./images/kids.jpg" alt="" /></div>
-   
+           <div id="banner_accordion">
           <div class="acord_box">
             <div class="hdaccor">
-              <h2>International Students</h2>
+              <h2>التصنيف حسب</h2>
             </div>
             <div class="slideaccor">
-              <div class="student_box"> <img src="./images/smiling child.jpg" alt="" />
-                <h2>Jai Parkash ( INDIA)</h2>
-                <p>Lorem ipsum dolor sit amet, ctetur adiiscing elit. Quisque sit amet sem felisLorem ipsum dolor sit amet, ctetur adiiscing elit. Quisque sit amet sem felis    Read More</p>
-              </div>
-            </div>
-          </div>
-          <div class="acord_box">
-            <div class="hdaccor">
-              <h2>Quick Links</h2>
-            </div>
-            <div class="slideaccor">
+              <h5>عن طريق الاهمية</h5>
               <ul>
-                <li><a href="#" class="active">Collge Exams List</a></li>
-                <li><a href="#">Illumni</a></li>
-                <li><a href="#">Sports Festivels</a></li>
-                <li><a href="#">National Day</a></li>
-                <li><a href="#">Books and Classis</a></li>
-                <li><a href="#">Our New courses</a></li>
-                <li><a href="#">Famous Courses</a></li>
-                <li><a href="#">A to Z Pages</a></li>
-                <li><a href="#">Top Courses</a></li>
-                <li><a href="#">Staff Section</a></li>
+
+                <li><a href="#" class="active">Browse undergraduate</a></li>
+                <li><a href="#">Browse postgraduate</a></li>
+                <li><a href="#">Browse Courses</a></li>
+                <li><a href="#">Others</a></li>
               </ul>
-              <a href="#" class="btn_banner1">Go to Quick Link Page</a> </div>
           </div>
+        </div>
         </div>
       </div>
 <!--
