--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,9 @@
             <div class="slideaccor">
               <h5>عن طريق الاهمية</h5>
               <ul>
-
+                <%=form_tag('/needs') do %>
+                    <%=select_tag "category_id", options_from_collection_for_select(@categories, "id", "name"), {:onchange => "go();"}%>
+                <%end%>             
                 <li><a href="#" class="active">Browse undergraduate</a></li>
                 <li><a href="#">Browse postgraduate</a></li>
                 <li><a href="#">Browse Courses</a></li>
@@ -135,3 +137,8 @@
     </div>
   </div>
 
+<script type=text/javascript>
+function go(){
+    alert($('#category_id option:selected'));
+}
+</script>
