--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Home: Welcome</title>
 <!--CSS -->
- 	<%= stylesheet_link_tag 'style', 'colorbox' %>
+ 	<%= stylesheet_link_tag %W(style colorbox)  %>
 <!--Js -->
-<%= javascript_include_tag  "jquery", "swiss", "hoverIntent", "functions", "jquery.colorbox"  %>
+
+<%= javascript_include_tag %W(jquery swiss hoverIntent functions jquery.colorbox)  %>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
      <div id='fb-root'></div>
@@ -81,10 +82,9 @@
       </ul>
     </div>
 
-        
-  <div id="content">
-    <%= yield %>
-  </div>
+    <div id="content">    
+      <%= yield %>
+    </div>
 
   <!--footer -->
   <div id="outer_footer">
