--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -189,18 +189,18 @@
 <script type=text/javascript>
 function go(){
     category_id = $('#category_id option:selected').val();
-    url = 'http://localhost:3000/browse_needs/category/'+ category_id;
+    url = 'http://sharekmasr.heroku.com/browse_needs/category/'+ category_id;
     window.location=url;
 }
 
 function go2(){
     category_id = $('#urgency_id option:selected').val();
-    url = 'http://localhost:3000/browse_needs/urgency/'+ category_id;
+    url = 'http://sharekmasr.heroku.com/browse_needs/urgency/'+ category_id;
     window.location=url;
 }
 function go3(){
     category_id = $('#district_id option:selected').val();
-    url = 'http://localhost:3000/browse_needs/district/'+ category_id;
+    url = 'http://sharekmasr.heroku.com/browse_needs/district/'+ category_id;
     window.location=url;
 }
 
