--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,7 @@
     <div id="content">
       <!--banner section -->
       <div id="banner_wrapp">
-        <div id="banner"><img src="/images/kids.jpg" alt="" /></div>
+        <div id="banner"><img src="/images/banner.jpg" alt="" /></div>
            <div id="banner_accordion">
           <div class="acord_box">
             <div class="hdaccor">
