--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,39 +72,30 @@
             <input type="text" value="Enter Email Address" onfocus="if(this.value == 'Enter Email Address') { this.value = ''; }" onblur="if(this.value == '') { this.value = 'Enter Email Address'; }" />
              </div>
           <div class="coursesearch">
-            <h2>Course Finder</h2>
+            <h2>ابحث عن حالة</h2>
             <ul>
               <li>
-                <label>Enter a Keyword</label>
-                <input type="text" value="Search you any keyword" class="txt1" onfocus="if(this.value == 'Search you any keyword') { this.value = ''; }" onblur="if(this.value == '') { this.value = 'Search you any keyword'; }" />
+                <label>ادخل كلمة البحث</label>
+                <input type="text" value="كلمة البحث" class="txt1" onfocus="if(this.value == 'Search you any keyword') { this.value = ''; }" onblur="if(this.value == '') { this.value = 'Search you any keyword'; }" />
               </li>
               <li> <span class="left">
-                <label>Degree Type</label>
+                <label>شهر</label>
                 <select>
-                  <option />Undergraduate
+                  <option />مارس
                 </select>
                 </span> <span class="right">
-                <label>Session</label>
+                <label>السنة</label>
                 <select>
                   <option />2011-12
                 </select>
                 </span> </li>
               <li> <span class="left">
-                <label>Campus</label>
+                <label>نوع الحالة</label>
                 <select>
-                  <option />Undergraduate
+                  <option />حرجة
                 </select>
-                </span> <span class="right">
-                <label>Resident Type</label>
-                <span class="groupradio">
-                <label>
-                <input type="radio" name="city" checked="checked" />
-                Uk </label>
-                <label>
-                <input type="radio" name="city" />
-                Wales</label>
-                </span> </span> </li>
-              <li><a href="#" class="btn_search"><span>Search</span></a></li>
+                </span> </li>
+              <li><a href="#" class="btn_search"><span>بحث</span></a></li>
             </ul>
           </div>
         </div>
