--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -154,8 +154,8 @@
       <div id="right_footer">
         <div class="tweetbox">
           <div class="left_tweet">
-            <p><a href="#">@University college</a> By Simon Cole 11-04-2011</p>
-            <p>“ Lorem ipsum dolor sit amet, ctetur adiiscing top of elit. Quisque sit amet sem felis  “</p>
+            <p><a href="#"></a></p>
+            <p></p>
             <em class="shoutright">&nbsp;</em> </div>
           <div class="right_tweet"> <img src="./images/bg-tweet.png" alt="" />
             <h3>Latest Tweet</h3>
