removed donate button

--- a/app/views/needs/show.html.erb
+++ b/app/views/needs/show.html.erb
@@ -2,6 +2,6 @@
   <h1><%=@need.title%></h1>
   <p><%= @need.description %></p>
   <p><%= @need.organisation.try(:name) %></p>
-  <%= button_to "Donate"%>
+  verified by: <img src="http://www.resala.org/images/logo.png" />
 
 </div>  
