--- a/app/views/needs/index.html.erb
+++ b/app/views/needs/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Index</h1>
-<%=render :partial=>'need',  :collection=>@needs%>
-
- 
+<div id="left_content">
+  <h1>Latest Blogs</h1>
+  <%=render :partial=>'need',  :collection=>@needs%>
+  <br class="clear" />
+</div>
