--- a/app/views/needs/index.html.erb
+++ b/app/views/needs/index.html.erb
@@ -1,5 +1,5 @@
 <div id="left_content">
-  <h1>Latest Blogs</h1>
+  <h1>احتياجات</h1>
   <%=render :partial=>'need',  :collection=>@needs%>
   <br class="clear" />
 </div>
