--- a/app/views/needs/satisfied.html.erb
+++ b/app/views/needs/satisfied.html.erb
@@ -1,3 +1,5 @@
-<h1>Satisfied</h1>
-<%=render :partial=>'need',  :collection=>@needs%>
-
+<div id="left_content">
+  <h1>انجازات</h1>
+  <%=render :partial=>'need',  :collection=>@needs%>
+  <br class="clear" />
+</div>
