--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Home: Welcome</title>
+<title>شارك - تبرع - اصنع فرق</title>
 <!--CSS -->
  	<%= stylesheet_link_tag %W(style colorbox)  %>
 <!--Js -->
